// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> redux-form --- Snapshot +++capturing Snapshot of Checkbox 1`] = `
<form
  className="dp-form"
  onSubmit={[Function]}
>
  <div
    className="dp-form-group"
  >
    
    
    <div
      className="dp-input--checkbox"
      style={Object {}}
    >
      <input
        checked={false}
        disabled={false}
        id="id2"
        name="checkbox1"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value=""
      />
      <label
        className="dp-input--checkbox__checkbox"
        htmlFor="id2"
      />
      <label
        className="dp-input__label"
        htmlFor="id2"
      >
        
      </label>
    </div>
  </div>
</form>
`;

exports[`>>> redux-form --- Snapshot +++capturing Snapshot of Datepicker 1`] = `
<form
  className="dp-form"
  onSubmit={[Function]}
>
  <div
    className="dp-form-group"
  >
    
    
    <div
      className="dp-datepicker"
      style={Object {}}
    >
      <div
        className="dp-input dp-input--with-icon--right"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-calendar fa-w-14 fa-sm dp-icon"
          data-icon="calendar"
          data-prefix="fas"
          onClick={[Function]}
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <input
          id="id3"
          name="date1"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          placeholder="DD/MM/YYYY"
          value=""
        />
      </div>
      <div />
    </div>
  </div>
</form>
`;

exports[`>>> redux-form --- Snapshot +++capturing Snapshot of FieldGroup 1`] = `
<form
  className="dp-form"
  onSubmit={[Function]}
>
  <div
    className="dp-form-group"
  >
    <label
      className="dp-input__label"
      htmlFor=""
    >
      test
      
    </label>
    
    <div
      className="dp-form-group"
    >
      
      
      <div
        className="dp-input"
      >
        <input
          id="id6"
          name="input1"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`>>> redux-form --- Snapshot +++capturing Snapshot of Input 1`] = `
<form
  className="dp-form"
  onSubmit={[Function]}
>
  <div
    className="dp-form-group"
  >
    
    
    <div
      className="dp-input"
    >
      <input
        id="id1"
        name="input1"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        value=""
      />
    </div>
  </div>
</form>
`;

exports[`>>> redux-form --- Snapshot +++capturing Snapshot of Radio 1`] = `
<form
  className="dp-form"
  onSubmit={[Function]}
>
  <div
    className="dp-form-group"
  >
    
    
    <div
      className="dp-input--radio"
      style={Object {}}
    >
      <label
        htmlFor="id4"
      >
        <input
          checked={false}
          disabled={false}
          id="id4"
          name="radio1"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          type="radio"
          value=""
        />
        <i />
        <label
          className="dp-input__label"
          htmlFor="id4"
        >
          
          
        </label>
      </label>
    </div>
  </div>
</form>
`;

exports[`>>> redux-form --- Snapshot +++capturing Snapshot of Select 1`] = `
<form
  className="dp-form"
  onSubmit={[Function]}
>
  <div
    className="dp-form-group"
  >
    
    
    <div
      className="dp-select"
    >
      <div
        className="Select dp-select is-clearable is-searchable Select--single"
      >
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="Select-multi-value-wrapper"
            id="react-select-2--value"
          >
            <div
              className="Select-placeholder"
            >
              Please select
            </div>
            <div
              className="Select-input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-activedescendant="react-select-2--value"
                aria-expanded="false"
                aria-haspopup="false"
                aria-owns=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={false}
                role="combobox"
                style={
                  Object {
                    "boxSizing": "content-box",
                    "width": "5px",
                  }
                }
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`>>> redux-form --- Snapshot +++capturing Snapshot of TagSet 1`] = `
<form
  className="dp-form"
  onSubmit={[Function]}
>
  <div
    className="dp-form-group"
  >
    
    
    <div
      className="dp-tag-set"
    >
      <span
        className="dp-tag editable"
      >
        tag1
        <span
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-11 fa-sm dp-icon dp-tag__close"
            data-icon="times"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 352 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </span>
      <span
        className="dp-tag editable"
      >
        tag2
        <span
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-11 fa-sm dp-icon dp-tag__close"
            data-icon="times"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 352 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </span>
      <div
        className="dp-search-button"
        onChange={[Function]}
        onKeyDown={[Function]}
      >
        <button
          className="dp-button dp-button--l dp-button--primary dp-button--shape-default dp-button--square"
          disabled={false}
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 fa-sm dp-icon"
            data-icon="plus"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
        <div />
      </div>
    </div>
  </div>
</form>
`;

exports[`>>> redux-form --- Snapshot +++capturing Snapshot of Textarea 1`] = `
<form
  className="dp-form"
  onSubmit={[Function]}
>
  <div
    className="dp-form-group"
  >
    
    
    <div
      className="dp-textarea"
    >
      <textarea
        name="textarea1"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        value=""
      />
    </div>
  </div>
</form>
`;
